# KindaLike

./: .dockerignore  .env.example  .gitignore  CHATBOT_SETUP.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: database.py  main.py  utils.py
backend/app/models/: schemas.py
backend/app/routes/: auth.py  chatbot.py  preferences.py
backend/app/services/: __init__.py  llm_service.py  location_service.py  yelp_service.py
database/: 002_add_chat_tables.sql  init.sql
src/: App.css  App.jsx
src/pages/: Chatbot.jsx  Login.jsx  Signup.jsx  Survey.jsx
src/services/: api.js
src/styles/: Chatbot.css
